# dark-factory

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  RECONCILIATION_REPORT.md  config.toml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
deploy/: prometheus.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AboutTab.tsx  AgentLogsTab.tsx  AgentMemoryTab.tsx  GapFinderTab.tsx  ManufactureTab.tsx  MetricsTab.tsx  RunDetailWindow.tsx  SettingsTab.tsx
frontend/src/contexts/: ManufactureContext.tsx
frontend/src/hooks/: useAgentRun.ts  useDashboard.ts
frontend/src/lib/: agentLogFormat.ts  openRunDetail.ts
src/dark_factory/: __init__.py  cli.py  config.py  log.py  prompts.py  prompts.yaml
src/dark_factory/agents/: __init__.py  background_loop.py  cancellation.py  orchestrator.py  progress.py  swarm.py  tools.py
src/dark_factory/api/: __init__.py  ag_ui_bridge.py  app.py  routes_admin.py  routes_agent.py  routes_dashboard.py  routes_metrics.py  routes_models.py  routes_runs.py  routes_upload.py
src/dark_factory/evaluation/: __init__.py  adaptive.py  metrics.py
src/dark_factory/graph/: __init__.py  client.py  repository.py  schema.py
src/dark_factory/llm/: agentic.py  anthropic.py  base.py  claude_code.py  langchain.py  tool_handlers.py
src/dark_factory/llm/prompts/: codegen.md  spec.md  testgen.md
src/dark_factory/memory/: __init__.py  dedup_writer.py  episodes.py  repository.py  schema.py
src/dark_factory/metrics/: __init__.py  bg_sampler.py  client.py  helpers.py  prometheus.py  rates.py  recorder.py  repository.py  schema.py
src/dark_factory/models/: __init__.py  domain.py
src/dark_factory/openspec/: __init__.py  parser.py  writer.py
src/dark_factory/openspec/templates/: design.md.j2  proposal.md.j2  spec.md.j2  tasks.md.j2
src/dark_factory/stages/: __init__.py  base.py  codegen.py  dedup.py  doc_extraction.py  e2e_validation.py  graph.py  ingest.py  reconciliation.py  spec.py  testgen.py
src/dark_factory/storage/: backend.py
src/dark_factory/ui/: __init__.py  health.py  helpers.py  watcher.py
src/dark_factory/vector/: __init__.py  client.py  collections.py  embeddings.py  merge.py  repository.py
tests/: conftest.py  test_ag_ui_bridge.py  test_agentic_loop.py  test_api_app.py  test_api_dashboard.py  test_api_upload.py  test_background_loop.py  test_cancellation.py  test_dedup.py  test_deep_agents.py  test_doc_extraction.py  test_e2e_validation.py  test_episodes.py  test_eval_feedback.py  test_evaluation.py  test_health_checks.py  test_ingest.py  test_l4_capabilities.py  test_llm_anthropic_structured.py  test_log.py  test_memory.py  test_memory_dedup.py  test_metrics.py  test_openspec_parser.py  test_openspec_writer.py  test_orchestrator.py  test_progress_broker.py  test_progress_events.py  test_prometheus_metrics.py  test_reconciliation.py  test_routes_admin.py  test_routes_models.py  test_routes_runs.py  test_run_history_early.py  test_security.py  test_spec_stage.py  test_storage.py  test_swarm.py  test_swarm_progress.py  test_tool_handlers.py  (+2 more)
